2000-05-27  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Invoke setsid()
	before execing the child process, as some applications terminate
	by doing kill (0, SIGTERM) (mgp), so when we launch them from the
	file manager they get the SIGTERM Message as well

Fri May 26 12:24:02 2000  George Lebl <jirka@5z.com>

	* gnome-score.c: Applied patch from Dennis Bjorklund
	  <dennisb@cs.chalmers.se> to fix another unprotected atof with
	  setting locale to "C" and then back.

2000-05-21  Jacob Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): use -m
	for xalf, so that it works with my netscape 3

Fri May 19 22:33:09 2000  George Lebl <jirka@5z.com>

	* gnome-url.c: use poptParseArgvString to parse the handler and
	  use gnome_exec_async instead of a shell.  No more evil URLs.

Fri May 19 00:01:36 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: add #include <ctype.h> for tolower

2000-05-18  Miguel de Icaza  <miguel@gnu.org>

	* gnome-config.c (gnome_config_iterator_next): Implement as
	documented.  

2000-05-09  Jacob Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): fix bug #10647

	STOOPID STOOPID STOOPID STOOPID STOOPID STOOPID STOOPID

2000-05-06  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): optimize.

Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>

	* gnome-config.c (_gnome_config_get_float_with_default)
	  (_gnome_config_set_float): setlocae for LC_NUMERIC to "C" and
	  then back to original locale when reading and writing floats
	  so that we can read/write floats over different locales

	* gnome-score.c (gnome_get_score_file_name) (log_score): 
	  The same as above.  Fixes bugs #10404, #10257

2000-05-04  Jacob Berkman  <jacob@helixcode.com>

	* gnomelib-init.c (gnomelib_option_cb): patch from Red Hat RPMs to
	not start esd if it is disabled (changed to default to true, since