@@ -1,3 +1,14 @@
+2000-06-15  Jody Goldberg <jgoldberg@home.com>
+
+	* gnome-score.c (print_ascore) : setlocale returns a static buffer.
+	  Copy it to safety.  Set the locale AFTER storing the current
+	  setting.
+	(log_score) : Ditto.
+	(gnome_score_get_notable) : Ditto.
+
+	* gnome-config.c (_gnome_config_get_float_with_default): Ditto.
+	(_gnome_config_set_float) : Ditto.
+
 2000-05-27  Miguel de Icaza  <miguel@helixcode.com>
 
 	* gnome-exec.c (gnome_execute_async_with_env_fds): Invoke setsid()
